# cmake_minimum_required(VERSION <specify CMake version here>)
project(orderContainer)
cmake_minimum_required(VERSION 2.8)
set(SOURCE_FILES main.cpp)
set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX FLAGS -fexec-charset=UTF-8)
set(BOOST_MIN_VERSION "1.71.0")

#include_directories(H:\\boost_1_71_0)
#include_directories(\\home\\boost_1_71_0)
#link_directories(H:\\boost_1_71_0\\libs)
#link_directories(\\home\\boost_1_71_0\\libs)
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/include/zmq)
link_directories(${PROJECT_SOURCE_DIR}/lib)
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    link_libraries(pthread)
    link_libraries(zmq)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    link_libraries(${PROJECT_SOURCE_DIR}/lib/libzmq.dll)
    set(CMAKE_EXE_LINKER_FLAGS "-static")
ENDIF ()
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
aux_source_directory(. DIR_SRCS)
add_executable(orderContainer ${DIR_SRCS})
#target_link_libraries(test boost_thread-mt boost_system)